--- a/nlp_machine_learning.ipynb
+++ b/nlp_machine_learning.ipynb
@@ -128,12 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data=pd.read_csv(\"./Corona_NLP_train.csv\",encoding=\"latin1\")\n",
-    "test_data=pd.read_csv(\"./Corona_NLP_test.csv\",encoding=\"latin1\")"
+    "train_data=pd.read_csv(\"./input/Corona_NLP_train.csv\",encoding=\"latin1\")\n",
+    "test_data=pd.read_csv(\"./input/Corona_NLP_test.csv\",encoding=\"latin1\")"
    ]
   },
   {
@@ -824,7 +824,7 @@
    "outputs": [],
    "source": [
     "# save dataset\n",
-    "df_select.to_csv(\"binary_data.csv\",index = False, encoding = \"utf-8\")"
+    "df_select.to_csv(\"./output/binary_data.csv\",index = False, encoding = \"utf-8\")"
    ]
   },
   {
@@ -841,11 +841,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"binary_data.csv\")"
+    "df = pd.read_csv(\"./output/binary_data.csv\")"
    ]
   },
   {
@@ -1092,7 +1092,7 @@
    "outputs": [],
    "source": [
     "# save dataset\n",
-    "df.to_csv(\"pos_tagged_data.csv\",index = False, encoding = \"utf-8\")"
+    "df.to_csv(\"./output/pos_tagged_data.csv\",index = False, encoding = \"utf-8\")"
    ]
   },
   {
@@ -1115,7 +1115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"pos_tagged_data.csv\")"
+    "df = pd.read_csv(\"./output/pos_tagged_data.csv\")"
    ]
   },
   {
@@ -1465,7 +1465,7 @@
    "outputs": [],
    "source": [
     "# save dataset\n",
-    "df.to_csv(\"preprocessed_data.csv\",index = False, encoding = \"utf-8\")"
+    "df.to_csv(\"./output/preprocessed_data.csv\",index = False, encoding = \"utf-8\")"
    ]
   },
   {
@@ -1507,7 +1507,7 @@
     }
    ],
    "source": [
-    "df_imp = pd.read_csv(\"preprocessed_data.csv\")\n",
+    "df_imp = pd.read_csv(\"./output/preprocessed_data.csv\")\n",
     "df_imp.shape"
    ]
   },
@@ -2689,7 +2689,7 @@
     "model = MultinomialNB()\n",
     "model.fit(x_train_dtm, y_train)\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"NaiveBayes\" + \".joblib\")"
+    "joblib.dump(model, \"./output/NaiveBayes.joblib\")"
    ]
   },
   {
@@ -2776,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2849,17 +2849,17 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, model_name + \".joblib\")"
+    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(model_name + \".joblib\")"
+    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -2956,7 +2956,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, model_name + \".joblib\")"
+    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -2966,7 +2966,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(model_name + \".joblib\")"
+    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3066,7 +3066,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, model_name + \".joblib\")"
+    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3076,7 +3076,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(model_name + \".joblib\")"
+    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3209,7 +3209,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, model_name + \".joblib\")"
+    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3219,7 +3219,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(model_name + \".joblib\")"
+    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3316,7 +3316,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, model_name + \".joblib\")"
+    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3326,7 +3326,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(model_name + \".joblib\")"
+    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3426,7 +3426,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, model_name + \".joblib\")"
+    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3436,7 +3436,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(model_name + \".joblib\")"
+    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3562,7 +3562,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, model_name + \".joblib\")"
+    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3572,7 +3572,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(model_name + \".joblib\")"
+    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3678,7 +3678,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, model_name + \".joblib\")"
+    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3688,7 +3688,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(model_name + \".joblib\")"
+    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3797,7 +3797,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, model_name + \".joblib\")"
+    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3807,7 +3807,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(model_name + \".joblib\")"
+    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
    ]
   },
   {
