--- a/nlp_machine_learning.ipynb
+++ b/nlp_machine_learning.ipynb
@@ -824,7 +824,7 @@
    "outputs": [],
    "source": [
     "# save dataset\n",
-    "df_select.to_csv(\"./output/binary_data.csv\",index = False, encoding = \"utf-8\")"
+    "df_select.to_csv(\"./saved data/binary_data.csv\",index = False, encoding = \"utf-8\")"
    ]
   },
   {
@@ -845,7 +845,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"./output/binary_data.csv\")"
+    "df = pd.read_csv(\"./saved data/binary_data.csv\")"
    ]
   },
   {
@@ -1086,16 +1086,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# save dataset\n",
-    "df.to_csv(\"./output/pos_tagged_data.csv\",index = False, encoding = \"utf-8\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1107,15 +1097,6 @@
     "* Glove: unsupervised learning model trained on word-word co-occurence counts, computed with respect to the entire document as opposed to one context window at a time. Embeddings are computed based on the probability of a word to appear in the context of another word, given the entire vocabulary.\n",
     "\n",
     "Spacy offers pre-trained word embedding models (such as \"en_core_web_md\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"./output/pos_tagged_data.csv\")"
    ]
   },
   {
@@ -1465,7 +1446,7 @@
    "outputs": [],
    "source": [
     "# save dataset\n",
-    "df.to_csv(\"./output/preprocessed_data.csv\",index = False, encoding = \"utf-8\")"
+    "df.to_csv(\"./saved data/preprocessed_data.csv\",index = False, encoding = \"utf-8\")"
    ]
   },
   {
@@ -1507,7 +1488,7 @@
     }
    ],
    "source": [
-    "df_imp = pd.read_csv(\"./output/preprocessed_data.csv\")\n",
+    "df_imp = pd.read_csv(\"./saved data/preprocessed_data.csv\")\n",
     "df_imp.shape"
    ]
   },
@@ -2689,7 +2670,7 @@
     "model = MultinomialNB()\n",
     "model.fit(x_train_dtm, y_train)\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/NaiveBayes.joblib\")"
+    "joblib.dump(model, \"./trained models/NaiveBayes.joblib\")"
    ]
   },
   {
@@ -2849,7 +2830,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
+    "joblib.dump(model, \"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -2859,7 +2840,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
+    "model = joblib.load(\"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -2956,7 +2937,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
+    "joblib.dump(model, \"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -2966,7 +2947,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
+    "model = joblib.load(\"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3066,7 +3047,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
+    "joblib.dump(model, \"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3076,7 +3057,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
+    "model = joblib.load(\"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3209,7 +3190,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
+    "joblib.dump(model, \"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3219,7 +3200,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
+    "model = joblib.load(\"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3316,7 +3297,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
+    "joblib.dump(model, \"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3326,7 +3307,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
+    "model = joblib.load(\"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3426,7 +3407,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
+    "joblib.dump(model, \"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3436,7 +3417,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
+    "model = joblib.load(\"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3562,7 +3543,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
+    "joblib.dump(model, \"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3572,7 +3553,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
+    "model = joblib.load(\"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3678,7 +3659,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
+    "joblib.dump(model, \"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3688,7 +3669,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
+    "model = joblib.load(\"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3797,7 +3778,7 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "# save fitted model\n",
-    "joblib.dump(model, \"./output/\" + model_name + \".joblib\")"
+    "joblib.dump(model, \"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
@@ -3807,7 +3788,7 @@
    "outputs": [],
    "source": [
     "# load fitted model\n",
-    "model = joblib.load(\"./output/\" + model_name + \".joblib\")"
+    "model = joblib.load(\"./trained models/\" + model_name + \".joblib\")"
    ]
   },
   {
