--- a/nlp_machine_learning.ipynb
+++ b/nlp_machine_learning.ipynb
@@ -3843,16 +3843,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<BarContainer object of 10 artists>"
+       "{'NaiveBayes': 0.7727272727272727,\n",
+       " 'RF_BOW': 0.6105904404873477,\n",
+       " 'RF_BPOS': 0.6232427366447985,\n",
+       " 'RF_EMB': 0.7849109653233365,\n",
+       " 'ADA_BOW': 0.7910028116213683,\n",
+       " 'ADA_BPOS': 0.5866916588566073,\n",
+       " 'ADA_EMB': 0.782099343955014,\n",
+       " 'XGB_BOW': 0.8547328959700093,\n",
+       " 'XGB_BPOS': 0.5726335520149953,\n",
+       " 'XGB_EMB': 0.810215557638238}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3875,21 +3884,31 @@
     "keys = accuracy.keys()\n",
     "values = accuracy.values()\n",
     "\n",
-    "plt.bar(keys, values)"
+    "plt.bar(keys, values)\n",
+    "accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<BarContainer object of 10 artists>"
+       "{'NaiveBayes': 0.8487592388879317,\n",
+       " 'RF_BOW': 0.8738762022151242,\n",
+       " 'RF_BPOS': 0.672661727478761,\n",
+       " 'RF_EMB': 0.8732970183739559,\n",
+       " 'ADA_BOW': 0.8633263089068844,\n",
+       " 'ADA_BPOS': 0.6044563138107293,\n",
+       " 'ADA_EMB': 0.8532796119335728,\n",
+       " 'XGB_BOW': 0.923911766135196,\n",
+       " 'XGB_BPOS': 0.59385517311456,\n",
+       " 'XGB_EMB': 0.8954902298622065}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3912,7 +3931,8 @@
     "keys = auc_roc.keys()\n",
     "values = auc_roc.values()\n",
     "\n",
-    "plt.bar(keys, values)"
+    "plt.bar(keys, values)\n",
+    "auc_roc"
    ]
   },
   {
