--- a/nlp_deeplearning.ipynb
+++ b/nlp_deeplearning.ipynb
@@ -2349,16 +2349,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<BarContainer object of 6 artists>"
+       "{'SimpleRNN_1': 0.8045281767845154,\n",
+       " 'SimpleRNN_2': 0.5366333723068237,\n",
+       " 'LSTM_1': 0.8658416271209717,\n",
+       " 'LSTM_2': 0.723667562007904,\n",
+       " 'GRU_1': 0.8730136156082153,\n",
+       " 'GRU_2': 0.7152299284934998}"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2381,22 +2386,27 @@
     "keys = acc.keys()\n",
     "values = acc.values()\n",
     "\n",
-    "acc\n",
-    "plt.bar(keys, values)"
+    "plt.bar(keys, values)\n",
+    "acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<BarContainer object of 6 artists>"
+       "{'SimpleRNN_1': 0.8723407241713917,\n",
+       " 'SimpleRNN_2': 0.5235732965994255,\n",
+       " 'LSTM_1': 0.9420847303781115,\n",
+       " 'LSTM_2': 0.8000567088448143,\n",
+       " 'GRU_1': 0.9455241206232359,\n",
+       " 'GRU_2': 0.7966039187394302}"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2419,8 +2429,8 @@
     "keys = auc_res.keys()\n",
     "values = auc_res.values()\n",
     "\n",
-    "auc_res\n",
-    "plt.bar(keys, values)"
+    "plt.bar(keys, values)\n",
+    "auc_res"
    ]
   },
   {
