--- a/nlp_bert.ipynb
+++ b/nlp_bert.ipynb
@@ -86,7 +86,9 @@
     "Before being used by BERT as inputs, the tweets are preprocessed using the transformers encoder: \n",
     "\n",
     "* input ids: token indices, i.e. numerical representations of token sequences that will be used as input by the model\n",
-    "* attention mask: optional argument, indicates which tokens should be attended to and which should not. Sequences of different lengths are padded/sliced until they are of the same dimension; the attention mask indicates the position of the padded indices, so that the model knows which token ids to ignore."
+    "* attention mask: optional argument, indicates which tokens should be attended to and which should not. Sequences of different lengths are padded/sliced until they are of the same dimension; the attention mask indicates the position of the padded indices, so that the model knows which token ids to ignore.\n",
+    "\n",
+    "We add a dense and an output layer to the pretrained BERT model and train those layers for 3 epochs"
    ]
   },
   {
